--- a/images/templates/images/image/details.html
+++ b/images/templates/images/image/details.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 
-{% block title %}{{ image.title }}{% endblock }%
+{% block title %}{{ image.title }}{% endblock %}
 
 {% block content %}
 <h1>{{ image.title }}</h1>
 
-<img src="{{ image.imgage.url }}" class="image-details"/>
-{% with total_likes=image.users_like.count %}
+<img src="{{ image.image.url }}" class="image-details"/>
+{% with total_likes=image.user_like.count %}
 
 <div class="image-info">
     <div>
