--- a/images/templates/images/image/details.html
+++ b/images/templates/images/image/details.html
@@ -6,7 +6,13 @@
 {% block content %}
 <h1>{{ image.title }}</h1>
 
-<img src="{{ image.image.url }}" class="image-details"/>
+  {% load thumbnail %}
+   {% thumbnail image.image "300" as im %}
+     <a href="{{ image.image.url }}">
+       <img src="{{ im.url }}" class="image-detail">
+     </a>
+   {% endthumbnail %}
+
 {% with total_likes=image.user_like.count %}
 
 <div class="image-info">
