--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,71 +1,67 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
 </head>
 <body>
-<!--<script>-->
-  <!--window.fbAsyncInit = function() {-->
-    <!--FB.init({-->
-      <!--appId      : '{186305318875527}',-->
-      <!--cookie     : true,-->
-      <!--xfbml      : true,-->
-      <!--version    : '{latest-api-version}'-->
-    <!--});-->
-
-    <!--FB.AppEvents.logPageView();-->
-
-  <!--};-->
-
-  <!--(function(d, s, id){-->
-     <!--var js, fjs = d.getElementsByTagName(s)[0];-->
-     <!--if (d.getElementById(id)) {return;}-->
-     <!--js = d.createElement(s); js.id = id;-->
-     <!--js.src = "https://connect.facebook.net/en_US/sdk.js";-->
-     <!--fjs.parentNode.insertBefore(js, fjs);-->
-   <!--}(document, 'script', 'facebook-jssdk'));-->
-<!--</script>-->
-
-
-<div id="header">
-    <span class="logo">Bookmarks</span>
-    {% if request.user.is_authenticated %}
-    <ul class="menu">
-        <li {% if section == "dashboard" %}class="selected"{% endif %}><a href="{% url "dashboard" %}">My Dashboard</a></li>
-        <li {% if section == "images" %}class="selected"{% endif %}><a href="#">Images</a></li>
-        <li {% if section == "people" %}class="selected"{% endif %}><a href="#">People</a></li>
-
-    </ul>
-    {% endif %}
-
-    <span class="user">
+    <div id="header">
+        <span class="logo">Bookmarks</span>
         {% if request.user.is_authenticated %}
-        Hello {{request.user.first_name }}, <a href="{% url "logout" %}">Logout</a>
-
-        {% else %}
-        <a href="{% url "login" %}">Login</a>
+        <ul class="menu">
+            <li {% if section == "dashboard" %}class="selected"{% endif %}><a href="{% url "dashboard" %}">My dashboard</a></li>
+            <li {% if section == "images" %}class="selected"{% endif %}><a href="{% url "images:list" %}">Images</a></li>
+            <li {% if section == "people" %}class="selected"{% endif %}><a href="#">People</a></li>
+        </ul>
         {% endif %}
-    </span>
-</div>
+
+        <span class="user">
+        {% if request.user.is_authenticated %}
+            Hello {{ request.user.first_name }}, <a href="{% url "logout" %}">Logout</a>
+        {% else %}
+            <a href="{% url "login" %}">Log-in</a>
+        {% endif %}
+        </span>
+    </div>
 
     {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message|safe }}
-        <a href="#" class="close">x</a></li>
-        {% endfor %}
-    </ul>
-{% endif %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">
+                    {{ message|safe }}
+                    <a href="#" class="close">×</a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
+    <div id="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+    <script>
+        var csrftoken = $.cookie('csrftoken');
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
 
-<div id="content">
-    {% block content %}
-    {% endblock %}
-</div>
-
+        $(document).ready(function(){
+            {% block domready %}
+            {% endblock %}
+		});
+    </script>
 </body>
 </html>
