--- a/images/templates/images/image/details.html
+++ b/images/templates/images/image/details.html
@@ -13,17 +13,25 @@
      </a>
    {% endthumbnail %}
 
-{% with total_likes=image.user_like.count %}
-
+  {% with total_likes=image.user_like.count users_like=image.user_
+   like.all %}
 <div class="image-info">
-    <div>
-        <span>
-            {{ total_likes }} like{{ total_likes|pluralize }}
-        </span>
-    </div>
-
-    {{ image.description|linebreaks }}
+     <div>
+       <span class="count">
+         <span class="total">{{ total_likes }}</span>
+         like{{ total_likes|pluralize }}
+       </span>
+       <a href="#" data-id="{{ image.id }}" data-action="{% if request.
+   user in users_like %}un{% endif %}like" class="like button">
+         {% if request.user not in users_like %}
+           Like
+         {% else %}
+           Unlike
+         {% endif %}
+       </a>
 </div>
+     {{ image.description|linebreaks }}
+   </div>
 
 <div class="image-likes">
     {% for user in image.users_like.all %}
@@ -35,5 +43,35 @@
     <p>Nobody likes this image yet</p>
 {% endfor %}
 </div>
+
 {% endwith %}
+
+{% block domready %}
+     $('a.like').click(function(e){
+       e.preventDefault();
+       $.post('{% url "images:like" %}',
+         {
+           id: $(this).data('id'),
+           action: $(this).data('action')
+         },
+         function(data){
+           if (data['status'] == 'ok')
+           {
+             var previous_action = $('a.like').data('action');
+             // toggle data-action
+             $('a.like').data('action', previous_action == 'like' ?
+   'unlike' : 'like');
+ 'Like');
+// toggle link text
+$('a.like').text(previous_action == 'like' ? 'Unlike' :
+// update total likes
+             var previous_likes = parseInt($('span.count .total').
+text());
+             $('span.count .total').text(previous_action == 'like' ?
+   previous_likes + 1 : previous_likes - 1);
+} }
+); });
+
+
+
 {% endblock %}
