--- a/account/templates/account/user/detail.html
+++ b/account/templates/account/user/detail.html
@@ -16,6 +16,9 @@
     follower{{ total_followers|pluralize }}
 </span>
 
+{% if not request.user.id is user.id %}
+<!--To make sure you don't follow yourself-->
+
 <a href="#" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow"
    class="follow button">
     {% if request.user in user.followers.all %}
@@ -24,6 +27,7 @@
     Follow
     {% endif %}
 </a>
+{% endif %}
 
 <div id="image-list" class="image-container">
     {% include "images/image/list_ajax.html" with images=user.images_created.all %}
@@ -31,3 +35,32 @@
 
 {% endwith %}
 {% endblock %}
+
+
+ {% block domready %}
+     $('a.follow').click(function(e){
+       e.preventDefault();
+       $.post('{% url "user_follow" %}',
+         {
+           id: $(this).data('id'),
+           action: $(this).data('action')
+         },
+         function(data){
+           if (data['status'] == 'ok') {
+             var previous_action = $('a.follow').data('action');
+             // toggle data-action
+             $('a.follow').data('action',
+               previous_action == 'follow' ? 'unfollow' : 'follow');
+             // toggle link text
+             $('a.follow').text(
+               previous_action == 'follow' ? 'Unfollow' : 'Follow');
+             // update total followers
+             var previous_followers = parseInt(
+               $('span.count .total').text());
+             $('span.count .total').text(previous_action == 'follow' ?
+   previous_followers + 1 : previous_followers - 1);
+           }
+} );
+     });
+   {% endblock %}
+
